# newblog

./: .gitignore  404.html  README.md  README.org  contact.org  cv.org  index.html  newblog.cabal  package-lock.json  projects.org  site.hs  site.webmanifest  skills.org  stack.yaml  wrangler.toml
.github/workflows/: build.yml
_site/: archive.html  atom.xml  contact.html  cv.html  index.html  projects.html  rss.xml  skills.html
_site/css/: default.css
_site/posts/: peano.html  (+12 more)
bib/: all.bib  bibliography.bib
css/: default.css  fonts.css  nav.css  pandoc.css  syntax.css  tufte.css
files/: minisign.pub  sysnav_internship.pdf.minisig
posts/: dawning-of-the-age-of-stochasticity.org  dyalog-apl-competition-2020-phase-1.org  dyalog-apl-competition-2020-phase-2.org  dyalog-apl-competition-2020.org  from-graphs-to-git.org  ginibre-ensemble.org  hierarchical-optimal-transport-for-document-classification.org  high-reliability-organizations.org  how-to-train-your-differentiable-filter.org  iclr-2020-notes.org  ising-apl.org  ising-model.org  kolmogorov-arnold-networks.org  lie-theory.org  lsystems.org  online-analysis-of-medical-time-series.org  operations-research-references.org  peano.org  planning-and-scheduling.org  ponder-this-2021-03.org  quaternions.org  randomness-and-uncertainty.org  reinforcement-learning-1.org  self-learning-chatbots-destygo.org  symbol-grounding.org
projects/: adsb.md  civilisation.md  community-detection.md  ising-model.md  lsystems.md  orbit.md  satrap.md  tda.md  ww2-bombings.md
templates/: archive.html  default.html  project-list.html
(+28 files in other folders)
