cabal-version:      2.4
name:               newblog
version:            0.1.0.0
author:             Dimitri Lozeve

executable site
  main-is:          site.hs
  build-depends:    base
                  , containers
                  , pandoc
                  , pandoc-sidenote
                  , hakyll
  ghc-options:      -threaded
  default-language: Haskell2010
