cabal-version:      3.8
name:               newblog
version:            0.1.0.0
author:             Dimitri Lozeve

executable site
  main-is:          site.hs
  build-depends:    base
                  , containers
                  , pandoc
                  , pandoc-sidenote
                  , hakyll >= 4
  ghc-options:      -threaded
  default-language: Haskell2010
